--- a/scss/_faq.scss
+++ b/scss/_faq.scss
@@ -49,6 +49,7 @@
         padding: 1rem;
         cursor: pointer;
         display: flex;
+        color: $black;
         justify-content: space-between;
     }
 
