--- a/scss/global.scss
+++ b/scss/global.scss
@@ -3,7 +3,7 @@
 @use 'mixins';
 
 
-body {
+body,main {
   overflow-x: hidden;
 
 }
